fix: home page header overlaps the navbar on smaller screens

--- a/public_html/css/index.css
+++ b/public_html/css/index.css
@@ -148,8 +148,6 @@ hr {
 }
 
 .hero {
-    position: relative;
-    height: calc(100vh - 71px);
     padding: 1em 1em;
     display: flex;
     flex-direction: column;
